added solution information on process framework

--- a/report.tex
+++ b/report.tex
@@ -1,5 +1,10 @@
 \documentclass[openany]{./llncs2e/llncs}
 \usepackage{graphicx}
+\usepackage{multirow}
+\usepackage{graphicx}
+\usepackage{amssymb}
+\usepackage{pifont}
+\usepackage[table,xcdraw]{xcolor}
 \usepackage{fixltx2e}
 \usepackage{mathtools}
 \usepackage{lmodern}
